--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username= postgres
-spring.datasource.password= ${DB_PASSWORD}
+spring.datasource.password= password
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create
+
+#spring.datasource.initialization-mode=always
+#spring.sql.init.data-locations=classpath:data.sql
