Added support for bcrypt when saving/reading passwords from db for users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password= password
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
 
 #spring.datasource.initialization-mode=always
 #spring.sql.init.data-locations=classpath:data.sql
